--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,8 @@ on:
 jobs:
   build-java:
 
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-       os: [ubuntu-latest, windows-latest, macOS-latest]
-    
+    runs-on: ${{windows-latest}}
+	  
     steps:
     - uses: actions/checkout@v2
 
@@ -30,7 +27,7 @@ jobs:
 
     - name: Build with Gradle
       run: ./gradlew build
-      
+
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
@@ -38,4 +35,3 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-         
