--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build-java:
 
-    runs-on: ${{windows-latest}}
+    runs-on: windows-latest
 	  
     steps:
     - uses: actions/checkout@v2
