--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ on:
 jobs:
   build-java:
 
-    runs-on: windows-latest
-	  
+    runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/checkout@v2
 
@@ -35,3 +35,4 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+         
